--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
       <div class="hero-text">
-        <h1> Hello there! ...I'm <span>Ruth Otsanya Ogbu</span></h1>
+        <h1> Hello there!
+          I'm <span>Ruth Otsanya Ogbu</span></h1>
         <h2>
           A FrontEnd Developer | Designer | CAC Specialist, Based in Nigeria.
         </h2>
@@ -492,4 +493,5 @@
     </script>
   </body>
 </html>
+
 
