--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ruth Ogbu | Front-End Developer</title>
+    <title>Ruth Otsanya Ogbu | Front-End Developer</title>
     <link rel="stylesheet" href="/assets/index.css" />
   </head>
   <body>
@@ -65,7 +65,7 @@
       </div>
       <div class="services-cards">
         <div class="card">
-          <h3>---- Web Development</h3>
+          <h3>---- WEB DEVELOPMENT</h3>
           <p>
             I build modern, responsive websites using HTML, CSS, and JavaScript.
             My focus is on clean design, smooth performance, and cross-device
@@ -89,7 +89,7 @@
           </p>
         </div>
         <div class="card">
-          <h3>---- UI/UX Designing</h3>
+          <h3>---- UI/UX DESIGNING</h3>
           <p>
             Crafting visually appealing and intuitive user interfaces that offer
             a delightful user experience is something I'm truly fanatical about.
@@ -493,6 +493,7 @@
     </script>
   </body>
 </html>
+
 
 
 
