--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           A FrontEnd Developer | Designer | CAC Specialist, Based in Nigeria.
         </h2>
         <p>
-          I'm thrilled to welcome you to my portfolio, i'm a curious and driven
+          I'm thrilled to welcome you to my portfolio, I am a curious and driven
           professional in designs, coding, and business compliance. I enjoy
           turning ideas into practical solutions—whether it’s building clean,
           user-friendly websites, making simple, clean-visual designs or helping
@@ -493,6 +493,7 @@
     </script>
   </body>
 </html>
+
 
 
 
