--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
           professional in designs, coding, and business compliance. I enjoy
           turning ideas into practical solutions—whether it’s building clean,
           user-friendly websites, making simple, clean-visual designs or helping
-          clients with CAC registrations and compliance. Always eager to explore
-          new tools and ideas, I strive to create work that is simple,
-          effective, and impactful.
+          clients with CAC registrations and compliance. 
         </p>
         <div class="hero-buttons">
           <button class="btn btn-primary">View my Portfolio</button>
@@ -120,7 +118,7 @@
             I’m a creative problem-solver who loves using design and code to
             bring ideas to life. Driven by curiosity, I’m always learning new
             tools and exploring better ways to create. Beyond work, I enjoy
-            sketching concepts and seeking inspiration to keep my
+            learning, sketching concepts and seeking inspiration to keep my
             creativity fresh.
           </p>
 
@@ -493,6 +491,7 @@
     </script>
   </body>
 </html>
+
 
 
 
